--- a/VideoEncoder/config.env
+++ b/VideoEncoder/config.env
@@ -24,10 +24,10 @@ SUDO_USERS = "1621366244" # List of sudo user's id, separated by space.
 
 # Encode Settings #
 RESOLUTION = "480"
-PRESET = "sf"
+PRESET = "f"
 TUNE = "film"
 AUDIO = "copy"
-CRF = 28
+CRF = 25
 
 # Optional #
 DOC_THUMB = 0
