--- a/VideoEncoder/config.env
+++ b/VideoEncoder/config.env
@@ -25,7 +25,7 @@ SUDO_USERS = "1621366244" # List of sudo user's id, separated by space.
 # Encode Settings #
 RESOLUTION = "480"
 PRESET = "f"
-TUNE = "film"
+TUNE = "fastdecode"
 AUDIO = "copy"
 CRF = 25
 
