--- a/VideoEncoder/config.env
+++ b/VideoEncoder/config.env
@@ -25,9 +25,9 @@ SUDO_USERS = "1621366244" # List of sudo user's id, separated by space.
 # Encode Settings #
 RESOLUTION = "480"
 PRESET = "f"
-TUNE = "fastdecode"
+TUNE = "film"
 AUDIO = "copy"
-CRF = 25
+CRF = 28
 
 # Optional #
 DOC_THUMB = 0
