--- a/VideoEncoder/config.env
+++ b/VideoEncoder/config.env
@@ -24,7 +24,7 @@ SUDO_USERS = "1621366244" # List of sudo user's id, separated by space.
 
 # Encode Settings #
 RESOLUTION = "480"
-PRESET = "uf"
+PRESET = "vf"
 TUNE = "film"
 AUDIO = "copy"
 CRF = 28
