--- a/VideoEncoder/config.env
+++ b/VideoEncoder/config.env
@@ -26,7 +26,7 @@ SUDO_USERS = "1621366244" # List of sudo user's id, separated by space.
 RESOLUTION = "480"
 PRESET = "vf"
 TUNE = "film"
-AUDIO = "copy"
+AUDIO = "opus"
 CRF = 28
 
 # Optional #
