--- a/VideoEncoder/config.env
+++ b/VideoEncoder/config.env
@@ -28,6 +28,8 @@ PRESET = "vf"
 TUNE = "film"
 AUDIO = "opus"
 CRF = 23
+TUNING = "off"      # on or off
+FORMAT = "x265"        # x264 or x265
 
 # Optional #
 DOC_THUMB = 0
